kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-flyt-history-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: fint-flyt-history-service-kafka-certificates
      containers:
        - image: ghcr.io/fintlabs/fint-flyt-history-service:sha-0000000
          name: fint-flyt-history-service
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "4Gi"
              cpu: "1"
            requests:
              memory: "4Gi"
              cpu: "100m"
          ports:
            - containerPort: 8080
